--- a/sample_config.env
+++ b/sample_config.env
@@ -3,11 +3,11 @@
 
 #________COMPULSORY____________#
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "5246220761:AAEF2T6TpJfJqdo1cSKBaRq8Ht8ZR9nnGoQ"  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+APP_ID = 5352748
+API_HASH = "a961ab832f6696a2c8fcbd4f6e3a7174"
+OWNER_ID = 592440736
+AUTH_CHANNEL = "-1001749485676" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
 
 
 #________NOT COMPULSORY____________#
@@ -15,7 +15,7 @@ AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -100125869
 # For RCLONE ::
 # Name of the folder....not ID
 DESTINATION_FOLDER = "TorrentLeech-Gdrive"
-INDEX_LINK = ""
+INDEX_LINK = "https://github.com/RAJANGAMR/Px-Leech-Pro-bot"
 
 # OTHERS ::
 DEF_THUMB_NAIL_VID_S = ""
